# shapley-least-squares

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: ag.csv  ag_hoeffding_stats.csv  ag_stats.csv  diabetes.csv  housing.csv  variance_comparison.csv  wine.csv  wvg.csv  wvg_hoeffding_raw.csv  wvg_hoeffding_stats.csv  wvg_n.csv  wvg_stats.csv  wvg_u.csv
src/shapley_least_squares/approx_algorithms/: ks.py  lss.py  s_lss.py  srs_lss.py  uks.py
src/shapley_least_squares/exact_algorithms/: brute_force_calculation_via_sum.py
src/shapley_least_squares/games/: airport_game.py  bankruptcy_game.py  explainability_game.py  glove_game.py  weighted_voting_game.py
src/shapley_least_squares/games/utils/: base_game.py
src/shapley_least_squares/scripts/: create_raw_data.py  empirical_stats.py  hoeffding_bounds.py  lss_vs_uks_sampling_probs_comparison.py  mse_comparisons.py  variance_comparisons.py
src/shapley_least_squares/scripts/utils/: extract_stats.py  hoeffding_utils.py  plot_mse_comparison.py  plot_variance_comparison.py  run_algorithms.py  run_mse_comparison.py  run_variance_comparison.py
tables/: ag_hoeffding_stats.tex  wvg_hoeffding_stats.tex
