[project]
name = "shapley-least-squares"
version = "0.0.0"
requires-python = ">=3.12"
authors = [
  {name = "Tim Pollmann"},
  {name = "Jochen Staudacher"}
]
readme = "README.md"
license-files = ["LICENSE"]

dependencies = [
    "click",
    "numpy",
    "pandas",
    "matplotlib",
    "PyQt5",
    "scikit-learn"
]
[project.optional-dependencies]
development = [
    "pre_commit"
]

[project.scripts]
run-ag-mse-comparison = "shapley_least_squares.scripts.mse_comparisons:ag"
run-wvg-n-mse-comparison = "shapley_least_squares.scripts.mse_comparisons:wvg_n"
run-wvg-u-mse-comparison = "shapley_least_squares.scripts.mse_comparisons:wvg_u"
run-diabetes-mse-comparison = "shapley_least_squares.scripts.mse_comparisons:diabetes"
run-housing-mse-comparison = "shapley_least_squares.scripts.mse_comparisons:housing"
run-wine-mse-comparison = "shapley_least_squares.scripts.mse_comparisons:wine"
run-variance-comparison = "shapley_least_squares.scripts.variance_comparisons:default"
show-lss-vs-uks-sampling-probs-comparison = "shapley_least_squares.scripts.lss_vs_uks_sampling_probs_comparison:default"
